fixed overflowing textbox

--- a/resources/public/css/styles.css
+++ b/resources/public/css/styles.css
@@ -14,6 +14,10 @@ p, input[type=text] {
     font-family: Inconsolata, monospace;
 }
 
+input[type=text] {
+    box-sizing: border-box;
+}
+
 #header-links {
     background-color: var(--bg2);
     padding: 10px;
